Fix top navbar layout on smaller screens

--- a/src/styles/_constants.scss
+++ b/src/styles/_constants.scss
@@ -6,3 +6,4 @@ $header-height: 100px;
 $method-margin: 20px;
 $indented-list-margin: 30px;
 $title-text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.13);
+$screen-breakpoint: 650px;
