--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -1,22 +1,60 @@
 nav.main-navbar {
   background-color: $_bookshelf-orange;
-  font-size: 20px;
+  font-size: 0;
   position: fixed;
   height: $navbar-height;
   top: 0;
   width: 100%;
   z-index: 1;
 
-  a {
-    color: white;
-    float: left;
-    line-height: 50px;
-    padding: 10px 20px;
-    text-decoration: none;
+  .show-menu {
+    @include navbar-button;
+    cursor: pointer;
+    display: none;
+  }
 
-    &:first-child {
-      width: $sidebar-width;
+  label {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  input[type=checkbox]{
+    display: none;
+  }
+
+  @media screen and (max-width: $screen-breakpoint) {
+    input[type=checkbox]:checked ~ #menu{
+      border-top: 1px solid $navbar-button-hover-color;
+      display: block;
     }
+  }
+
+  ul {
+    background-color: $_bookshelf-orange;
+    list-style-type: none;
+    display: inline-block;
+
+    @media screen and (max-width: $screen-breakpoint) {
+      display: none;
+    }
+  }
+
+  li {
+    display: inline;
+
+    @media screen and (max-width: $screen-breakpoint) {
+      display: block;
+    }
+  }
+
+  > a:first-child {
+    width: $sidebar-width;
+  }
+
+  a {
+    @include navbar-button;
+    display: inline-block;
 
     i, img {
       margin-right: 5px;
