--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ html {
   background-color: $main-background-color;
   -webkit-text-size-adjust: 100%;
 
-  @media screen and (max-width: 650px) {
+  @media screen and (max-width: $screen-breakpoint) {
     font-size: 15px;
   }
 }
